[gd_scene load_steps=3 format=3 uid="uid://d0aqjr488e1te"]

[ext_resource type="Script" uid="uid://dn6r2tjmfa3r3" path="res://first prototype/objects/card.gd" id="1_spyjs"]
[ext_resource type="Texture2D" uid="uid://cf0utav6mkrt5" path="res://icon.svg" id="2_tbjc2"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spyjs")

[node name="left_button" type="Button" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MainText" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_tbjc2")

[node name="right_button" type="Button" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[connection signal="pressed" from="left_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="right_button" to="." method="_on_button_2_pressed"]
